--- a/app/src/main/res/layout/activity_monument_list.xml
+++ b/app/src/main/res/layout/activity_monument_list.xml
@@ -59,7 +59,7 @@
                 android:textSize="14sp" />
         </LinearLayout>
 
-        <!-- Nuevo globo de selección de ubicación -->
+        <!-- Globo de selección de ubicación -->
         <LinearLayout
             android:id="@+id/locationSelector"
             android:layout_width="wrap_content"
@@ -88,9 +88,9 @@
                 android:text="Ubicación"
                 android:textColor="@android:color/black"
                 android:textSize="14sp" />
-        </LinearLayout>
-        </LinearLayout>
 
+            </LinearLayout>
+        </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
 
     <!-- RecyclerView para mostrar la lista de monumentos -->
