--- a/app/src/main/res/layout/activity_monument_list.xml
+++ b/app/src/main/res/layout/activity_monument_list.xml
@@ -125,4 +125,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <LinearLayout
+        android:id="@+id/dynamic_buttons_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
