--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="primaryTextColor">#000000</color> <!-- Color de texto negro -->
     <color name="primaryColor">#6200EE</color> <!-- Color morado o el que prefieras para el FAB -->
-
+    <color name="primary">#6200EE</color>
 </resources>
