--- a/app/src/main/res/layout/activity_route_preview.xml
+++ b/app/src/main/res/layout/activity_route_preview.xml
@@ -7,24 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".RoutePreviewActivity">
 
-    <!-- Botón para regresar -->
-    <ImageButton
-        android:id="@+id/returnButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_back"
-        android:contentDescription="Volver"
-        app:layout_constraintStart_toStartOf="parent"
+    <!-- Título de la pantalla -->
+    <TextView
+        android:id="@+id/previewTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Previsualización de la Ruta"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="?attr/selectableItemBackgroundBorderless" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
     <!-- RecyclerView para mostrar la lista de monumentos -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/returnButton"
+        app:layout_constraintTop_toBottomOf="@id/previewTitle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
