--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="purple_200">#ADE8F4</color> <!-- Azul claro del logo -->
+    <color name="purple_500">#0077B6</color> <!-- Azul principal -->
+    <color name="purple_700">#023E8A</color> <!-- Azul oscuro -->
+    <color name="teal_200">#90E0EF</color> <!-- Azul pastel claro -->
+    <color name="teal_700">#48CAE4</color> <!-- Azul vibrante -->
+    <color name="black">#000000</color> <!-- Negro -->
+    <color name="white">#FFFFFF</color> <!-- Blanco -->
+    <color name="colorPrimary">#0077B6</color> <!-- Azul principal -->
+    <color name="colorPrimaryDark">#023E8A</color> <!-- Azul oscuro -->
+    <color name="colorAccent">#ADE8F4</color> <!-- Azul claro -->
     <color name="primaryTextColor">#000000</color> <!-- Color de texto negro -->
-    <color name="primaryColor">#6200EE</color> <!-- Color morado o el que prefieras para el FAB -->
-    <color name="primary">#6200EE</color>
-    <color name="light_gray">#D3D3D3</color>
+    <color name="primaryColor">#0077B6</color> <!-- Azul principal para el FAB -->
+    <color name="primary">#0077B6</color> <!-- Azul principal -->
+    <color name="light_gray">#D3D3D3</color> <!-- Gris claro -->
 </resources>
