--- a/app/src/main/res/layout/activity_route_preview.xml
+++ b/app/src/main/res/layout/activity_route_preview.xml
@@ -7,20 +7,29 @@
     android:layout_height="match_parent"
     tools:context=".RoutePreviewActivity">
 
+    <View
+        android:id="@+id/titleBar"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:background="@android:color/holo_blue_dark"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <!-- Título de la pantalla -->
     <TextView
         android:id="@+id/previewTitle"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Previsualización de la Ruta"
         android:textSize="20sp"
-        android:textColor="@color/black"
+        android:textColor="@android:color/white"
         android:textStyle="bold"
-        android:gravity="center"
-        android:padding="16dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/titleBar"
+        app:layout_constraintBottom_toBottomOf="@id/titleBar"
+        android:gravity="center" />
 
 
     <!-- RecyclerView para mostrar la lista de monumentos -->
